// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card component should render 1`] = `
<DocumentFragment>
  <section
    class="card"
  >
    <div
      class="card__container"
    >
      <div
        class="card__header card__header--with-separator"
      >
        <h2>
          Title
        </h2>
      </div>
      <div
        class="card__content"
      >
        <span>
          Some content
        </span>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Card component should render card with links 1`] = `
<DocumentFragment>
  <section
    class="card"
  >
    <div
      class="card__container"
    >
      <div
        class="card__header card__header--with-separator"
      >
        <h2>
          Title
        </h2>
      </div>
      <div
        class="card__content"
      >
        <span>
          Some content
        </span>
      </div>
    </div>
    <div
      class="card__actions"
    >
      <a
        href="https://www.uniprot.org"
      >
        link
      </a>
    </div>
  </section>
</DocumentFragment>
`;
